--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/settingsFragment">
+    app:startDestination="@id/usersListFragment">
     <fragment
-        android:id="@+id/settingsFragment"
-        android:name="com.github.htdangkhoa.cleanarchitecture.ui.settings.fragments.SettingsFragment"
-        android:label="SettingsFragment" />
+        android:id="@+id/usersListFragment"
+        android:name="com.github.htdangkhoa.cleanarchitecture.ui.main.fragments.UsersListFragment"
+        android:label="users_list_fragment"
+        tools:layout="@layout/users_list_fragment" />
 </navigation>
